fix: change the message for empty notification

--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -105,7 +105,7 @@
                 </li>
                 {% endfor %}
               {% else %}
-                <li><div class="dropdown-item">No notifications</div></li>
+                <li><div class="dropdown-item">No new notifications</div></li>
               {% endif %}
             </ul>
           </div>
