--- a/main/page_item/templates/item.html
+++ b/main/page_item/templates/item.html
@@ -40,7 +40,7 @@
         </div>
 
         <!-- Tile Images -->
-        <div id="tile-images-container" class="d-flex">
+        <div id="tile-images-container" class="d-flex flex-wrap">
           {% for image in item.images %}
             {% if image.url %}
               <div class="tile-container">
