style: fixed mobile layouts

--- a/main/page_addons/templates/about_us.html
+++ b/main/page_addons/templates/about_us.html
@@ -73,7 +73,7 @@
       <p class="lead">The students and enthusiasts behind this simple auction project</p>
     </div>
   
-    <div class="row justify-content-center">
+    <div class="row justify-content-center mx-0">
       <div class="col-lg-3 col-md-6 mb-4">
         <div class="card border-0 shadow-sm text-center h-100">
           <div class="card-body">
