--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -103,7 +103,7 @@
                 </li>
                 {% endfor %}
               {% else %}
-                <li><div class="dropdown-item">No notifications</div></li>
+                <li><div class="dropdown-item p-2 text-center">No notifications</div></li>
               {% endif %}
             </ul>
           </div>
