--- a/main/templates/base.html
+++ b/main/templates/base.html
@@ -11,6 +11,8 @@
   <link rel="apple-touch-icon" sizes="180x180" href="{{ url_for('static', filename='images/favicon/apple-touch-icon.png') }}" />
   <meta name="apple-mobile-web-app-title" content="Vault" />
   <link rel="manifest" href="{{ url_for('static', filename='images/favicon/site.webmanifest') }}" />
+  <!-- Stop highlighting phone numbers on iOS -->
+  <meta name="format-detection" content="telephone=no">
   <!-- Google Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
