--- a/main/page_experts/templates/update_expert.html
+++ b/main/page_experts/templates/update_expert.html
@@ -87,6 +87,13 @@
       </button>
     </div>
 
+    <!-- Mark Whole Week as Available Button -->
+    <div class="d-flex justify-content-center mt-2">
+      <button type="button" id="mark-week-available" class="btn btn-success">
+        Mark Whole Week as Available
+      </button>
+    </div>
+
     <div class="d-flex justify-content-center my-3">
       <button type="submit" class="btn btn-primary">
         Save Availability
