--- a/main/page_authenticate_item/templates/authenticate_item.html
+++ b/main/page_authenticate_item/templates/authenticate_item.html
@@ -32,7 +32,7 @@
       <!-- Messages -->
       <div class="messages" id="{% if authentication != 1 or not (is_expert or is_creator) %}messages-tall{% elif is_creator%}messages-mid{% else %}messages-short{% endif %}">
         {% for message in messages %}
-        <div class="message {% if message.sender_id == current_user.id %}my-messages{% else %}other-messages{% endif %}">
+        <div class="message {% if message.sender_id == current_user.id or (current_user.role == 3 and message.sender.role == 1) %}my-messages{% else %}other-messages{% endif %}">
           <p>{{ message.message_text }}</p>
           {% if message.image_urls %}
           <div class="image-gallery">
