--- a/main/static/css/styles.css
+++ b/main/static/css/styles.css
@@ -582,6 +582,13 @@ h1, h2, h3, h4, h5 {
   opacity: 1;
 }
 
+.authentication-alert {
+  color: var(--primary-color);
+  text-decoration: none;
+  text-align: center;
+  display: block;
+}
+
 /* Media query for mobile responsiveness */
 @media (max-width: 576px) {
   .top-bar .contact-info span {
